<resources>
    <string name="app_name">Tips</string>
    <string name="_username">Username</string>
    <string name="_password">Password</string>
    <string name="_dontHaveAnAccount">Don\'t Have An Account ?</string>
    <string name="_forgotPassword">Forgot Password</string>
    <string name="emailNotValid">Not a valid email address!</string>
    <string name="passwordNotValid">Password is not valid!</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">233747500585878</string>
    <string name="fb_login_protocol_scheme">fb233747500585878</string>
    <string name="_email">Email</string>
    <string name="passwordSizeNotValid">password must be longer than 5 characters</string>
    <string name="textEmptyOrBlank">Text not be empty</string>
    <string name="_rememberPassword">Remember Your Password By Your Email</string>
    <string name="hint_restaurant_name">Restaurant Name</string>
    <string name="go_restaurant">Go</string>
    <string name="menu_button_restaurant">Menu</string>
    <string name="open_table_button">Open Table</string>
    <string name="just_when_it_is_in_local">Just when it is in local</string>
    <string name="new_order">New Order</string>
    <string name="close_account">Close Account</string>
    <string name="payButton">Pay</string>
    <string name="orderButton">What you wish?</string>
    <string name="friendsButton">View your Friends</string>
    <string name="type_menu_name">Main Course</string>
</resources>
