<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateUserActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:fadingEdge="none|horizontal"
        android:fontFamily="@font/syncopate"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tilUsernameCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsernameCreate"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syncopate"
            android:hint="@string/_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmailCreate"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsernameCreate">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syncopate"
            android:hint="@string/_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPasswordCreate"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmailCreate">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/syncopate"
            android:hint="@string/_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/shape_button_auth"
        android:fontFamily="@font/syncopate"
        android:text="SIGN UP"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="signUp"/>
</android.support.constraint.ConstraintLayout>