<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgotPasswordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:fadingEdge="none|horizontal"
        android:fontFamily="@font/syncopate"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tilUsernameCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tilUsernameCreate"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:text="@string/_rememberPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmailCreate"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsernameCreate">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:background="@drawable/shape_button_auth"
        android:fontFamily="@font/syncopate"
        android:text="Remember"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>