<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RestaurantActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:hint="@string/hint_restaurant_name"
            android:textAlignment="center"
            android:textColor="#0099FF"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/lotation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Lotation"
                    android:textAlignment="center"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/lotation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_bold"
                    android:hint="HIGH"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/waiting_time" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Waitting Time"
                    android:textAlignment="center"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/waitting_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_bold"
                    android:hint="45 min."
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/lotation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_bold"
                    android:hint="U$ 67,00"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/goToRestaurantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/go_restaurant"
        app:layout_constraintBaseline_toBaselineOf="@+id/menuButton"
        app:layout_constraintEnd_toStartOf="@+id/menuButton"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_button_restaurant"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/raleway_bold"/>

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="17dp"
        android:text="@string/menu_button_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goToRestaurantButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@drawable/shape_button_restaurant"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/raleway_bold"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/open_table_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToRestaurantButton"
        android:background="@drawable/shape_button_open_table"
        android:textColor="#000000"
        android:fontFamily="@font/raleway_bold"
        android:onClick="openTable"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/just_when_it_is_in_local"
        android:textColor="#000000"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />




</android.support.constraint.ConstraintLayout>